// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_storage_types.sources;

import "repr/src/row.proto";
import "storage-types/src/errors.proto";
import "storage-types/src/sources/kafka.proto";
import "storage-types/src/sources/load_generator.proto";
import "storage-types/src/sources/mysql.proto";
import "storage-types/src/sources/postgres.proto";
import "storage-types/src/sources/sql_server.proto";

message ProtoSourceData {
  oneof kind {
    mz_repr.row.ProtoRow ok = 1;
    errors.ProtoDataflowError err = 2;
  }
}

// message ProtoSourceExportDetails {
//   oneof kind {
//     mz_storage_types.sources.kafka.ProtoKafkaSourceExportDetails kafka = 1;
//     mz_storage_types.sources.postgres.ProtoPostgresSourceExportDetails postgres = 2;
//     mz_storage_types.sources.mysql.ProtoMySqlSourceExportDetails mysql = 3;
//     mz_storage_types.sources.sql_server.ProtoSqlServerSourceExportDetails sql_server = 5;
//     mz_storage_types.sources.load_generator.ProtoLoadGeneratorSourceExportDetails loadgen = 4;
//   }
// }

// NOTE: this message is encoded and stored as part of a source export
// statement option (currently only `CREATE SUBSOURCE` statements)
// Be extra careful about changes, ensuring that all changes are backwards compatible
message ProtoSourceExportStatementDetails {
  oneof kind {
    mz_storage_types.sources.postgres.ProtoPostgresSourceExportStatementDetails postgres = 1;
    mz_storage_types.sources.mysql.ProtoMySqlSourceExportStatementDetails mysql = 2;
    mz_storage_types.sources.sql_server.ProtoSqlServerSourceExportStatementDetails sql_server = 5;
    mz_storage_types.sources.load_generator.ProtoLoadGeneratorSourceExportStatementDetails loadgen = 3;
    mz_storage_types.sources.kafka.ProtoKafkaSourceExportStatementDetails kafka = 4;
  }
}
